# consonance-ACE

./: .gitignore  README.md  pyproject.toml  requirements.txt
ACE/: inference.py  trainer.gin  trainer.py
ACE/models/: conformer_decomposed.gin  conformer_decomposed.py
ACE/preprocess/: chord_processor.py  preprocess_data.py
