[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consonance-ace"
version = "0.0.1"
description = "Decomposed Consonance-Based Training for Improved Audio Chord Estimation"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "wandb==0.19.8",
  "tqdm==4.67.1",
  "torchaudio>=2.6.0",
  "torch>=2.6.0",
  "harte-library==0.4.5",
  "mir_eval==0.8.2",
  "jams==0.3.5",
  "librosa==0.11.0",
  "gin-config==0.5.0",
  "lightning==2.5.1",
  "pumpp==0.6.0",
  "scikit-learn>=1.6.1",
]

[project.urls]
Homepage = "https://github.com/andreamust/consonance-ACE"
Repository = "https://github.com/andreamust/consonance-ACE"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ACE*"]

[tool.setuptools.package-data]
"ACE" = [
    "*.gin",
    "**/*.gin",
    "checkpoints/*.ckpt",
]